upres mobile nfts image, fix timer jumping

--- a/components/dove-block/Dove.module.scss
+++ b/components/dove-block/Dove.module.scss
@@ -25,6 +25,7 @@
 
 .nfts {
   margin-right: 55px;
+  width: 100%;
   max-width: 500px;
   max-height: 471px;
 
