--- a/components/timer/Timer.module.scss
+++ b/components/timer/Timer.module.scss
@@ -26,6 +26,8 @@
   font-family: 'Gilroy-Extrabold', Arial, sans-serif;
   font-size: 44px;
   margin-bottom: 6px;
+  width: 40px;
+  text-align: center;
 
   @media (max-width: 480px) {
     font-size: 40px;
